kubernetes/apps/base/flux-system/flux-operator/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: flux-block-ipv6-egress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/part-of: flux
  egress:
    # Allow DNS
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    # Allow Kubernetes API
    - toEntities:
        - kube-apiserver
    # Allow access to other flux components
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/part-of: flux
            io.kubernetes.pod.namespace: flux-system
    # Allow IPv4; IPv6 is implicitly denied
    - toCIDR:
        - "0.0.0.0/0"
        - "fdd5:aa8:9535::/48"
